Fixed overlapping of navbar

--- a/styles/main.css
+++ b/styles/main.css
@@ -15,6 +15,7 @@ a {
 }
 
 .nav-bar {
+    z-index: 1;
     display: flex;
     justify-content: space-between;
     background-color: #222222;
